--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Helvetica Now Display";
+    src: url("/fonts/big/HelveticaNowDisplay-Bold.otf");
+}
+
+@font-face{
+    font-family: "Roboto";
+    src: url("/fonts/RobotoFlex-VariableFont.ttf");
+}
