--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,8 @@
     font-family: "Roboto";
     src: url("/fonts/RobotoFlex-VariableFont.ttf");
 }
+
+h1,h2,h3,h4{
+    @apply font-big;
+    font-feature-settings: "calt" 1, "liga" 1, "rlig" 1, "rvrn" 1, "kern" 1, "rclt" 1, "ss01" 1, "ss02" 1, "ss03" 1;
+}
