--- a/src/style.css
+++ b/src/style.css
@@ -16,3 +16,8 @@ h1,h2,h3,h4{
     @apply font-big;
     font-feature-settings: "calt" 1, "liga" 1, "rlig" 1, "rvrn" 1, "kern" 1, "rclt" 1, "ss01" 1, "ss02" 1, "ss03" 1;
 }
+
+h5,h6{
+    @apply font-small;
+    font-feature-settings: "calt" 1, "rlig" 1, "rvrn" 1, "kern" 1, "rclt" 1, "ss01" 1, "ss06" 1, "liga" 1;
+}
